2011-02-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17616: htmlArea RTE: Link dialogue doesn't open when anchor class is set with double quotes

2011-02-17  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17355: Dependencies in sysext 'version' and 'workspaces'
	* Fixed bug #17244: Error Message while Updating 4.4.6 > 4.5

2011-02-16  Jigal van Hemert  <jigal@xs4all.nl>

	* Cleanup #17606: Remove deprecated option TTFLocaleConv

2011-02-16  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17422: cObj->FORM() wasn't processing the $formData parameter (Thanks to Hubertus Golf)

2011-02-16  Francois Suter  <francois.suter@typo3.org>

	* Cleanup #17513: Improve sys_note CSH file
	* Fixed bug #17385: Restore proper behavior of LOAD_REGISTER (Thanks to Jo Hasenau)

2011-02-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17587: htmlArea RTE: RTE should not be enabled on Android

2011-02-14  Steffen Gebert  <steffen.gebert@typo3.org>

	* Fixed bug #17564: Red question marks in QuickEdit instead of icons (Thanks to Jürgen Ettmueller)

2011-02-14  Georg Ringer <typo3@ringerge.org>

	* Fixed bug #16890: tcaTree in flexforms still breaks

2011-02-14  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #17541: cookies are not required in CLI mode / cookieSecure blocks cli

2011-02-13  Steffen Gebert  <steffen.gebert@typo3.org>

	* Added Test #17495: Add Unit Tests for t3lib_div::resolveBackPath()

2011-02-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #17552: htmlArea RTE: Delete deprecated class HTMLArea.Dialog
	* Fixed issue #17554: htmlArea RTE: Delete deprecated DAM integration extension variable
	* Fixed issue #17555: htmlArea RTE: Delete deprecated Aspell-related extension configuration variables
	* Fixed issue #17557: htmlArea RTE: Delete deprecated Page TSConfig properties
	* Fixed issue #17558: htmlArea RTE: Delete deprecated browser identification js variables